--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,1 +1,29 @@
-<p>header works!</p>
+<mat-toolbar color="primary">
+  <div class="header__search">
+    <input class="header__search--input" type="text" placeholder="Buscar" />
+    <button class="header__search--btn">
+      <mat-icon> search </mat-icon>
+    </button>
+  </div>
+
+  <div class="header__logo">
+    <a routerLink="">
+      <img
+        class="logo"
+        src="../../../../assets/img/logo.png"
+        alt="Lok Objetos Logo"
+      />
+    </a>
+  </div>
+
+  <nav>
+    <a mat-button *ngFor="let link of links" routerLink="{{ link.path }}">
+      <mat-icon *ngIf="link.isIcon; else text"> {{ link.desc }}</mat-icon>
+      <ng-template #text>{{ link.desc }}</ng-template>
+    </a>
+  </nav>
+
+  <!-- <button id="menuBtn" class="header__menuBtn">
+    <mat-icon>menu</mat-icon>
+  </button> -->
+</mat-toolbar>
