--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  font-family: "Montserrat", Sans-serif;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: rgb(185, 185, 185);
+}
