--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,1 +1,22 @@
-<p>footer works!</p>
+<mat-toolbar color="primary" class="footer">
+  <div class="footer__links">
+    <a
+      class="footer__link"
+      href="https://www.facebook.com/Lok.objetos"
+      target="_blank"
+    >
+      <img src="../../../../assets/img/facebook.svg" alt="Facebook" />
+    </a>
+    <a
+      class="footer__link"
+      href="https://www.instagram.com/lok.objetos"
+      target="_blank"
+    >
+      <img src="../../../../assets/img/instagram.svg" alt="Instagram" />
+    </a>
+  </div>
+
+  <h4 class="footer__title">
+    Copyright LOK objetos de diseño - 2021. Todos los derechos reservados.
+  </h4>
+</mat-toolbar>
