--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -2,6 +2,7 @@ mat-toolbar {
   height: 100px;
   display: flex;
   justify-content: space-between;
+  flex-direction: row;
   padding: 0 30px;
 
   .header__logo {
