--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -15,6 +15,32 @@
     font-weight: 700;
     font-size: 18px;
     font-family: "Montserrat", Sans-serif;
+
+    @media (max-width: 800px) {
+      font-size: 16px;
+    }
+    @media (max-width: 750px) {
+      font-size: 15px;
+    }
+    @media (max-width: 700px) {
+      font-size: 14px;
+    }
+
+    @media (max-width: 600px) {
+      font-size: 13px;
+    }
+
+    @media (max-width: 500px) {
+      font-size: 12px;
+    }
+
+    @media (max-width: 400px) {
+      font-size: 10px;
+    }
+
+    @media (max-width: 380px) {
+      font-size: 9px;
+    }
   }
 
   &__links {
