--- a/src/app/pages/productos/components/productos/productos.component.html
+++ b/src/app/pages/productos/components/productos/productos.component.html
@@ -1,1 +1,11 @@
-<p>productos works!</p>
+<div class="background">
+  <main>
+    <h2>Productos</h2>
+
+    <app-lista-productos></app-lista-productos>
+
+    <button mat-raised-button color="primary">
+      <mat-icon>shopping_cart</mat-icon>
+    </button>
+  </main>
+</div>
