--- a/src/app/pages/atencion-al-cliente/components/atencion-al-cliente/atencion-al-cliente.component.scss
+++ b/src/app/pages/atencion-al-cliente/components/atencion-al-cliente/atencion-al-cliente.component.scss
@@ -1,7 +1,7 @@
 .form {
   &__container {
-    height: 72.8%;
-    margin: 0 px;
+    height: 73.1%;
+    margin: 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -17,10 +17,13 @@
     background-position: center;
 
     h1 {
-      margin: 30px 0px 0px 0px;
+      padding: 40px 0 0 0;
+      display: flex;
+      justify-content: center;
       font-family: "Montserrat", Sans-serif;
-      font-weight: 700;
-      font-size: 20;
+      font-weight: 600;
+      font-size: 28px;
+      color: #fff;
     }
   }
   display: flex;
