--- a/src/app/pages/productos/components/productos/productos.component.html
+++ b/src/app/pages/productos/components/productos/productos.component.html
@@ -2,10 +2,14 @@
   <main>
     <h2>Productos</h2>
 
-    <app-lista-productos></app-lista-productos>
+    <app-lista-productos
+      (loadingEvent)="setLoading($event)"
+    ></app-lista-productos>
 
-    <button mat-raised-button color="primary">
+    <button *ngIf="!loading" mat-raised-button color="primary">
       <mat-icon>shopping_cart</mat-icon>
     </button>
   </main>
 </div>
+
+<app-load-spinner [loading]="loading"></app-load-spinner>
