--- a/src/app/pages/atencion-al-cliente/components/atencion-al-cliente/atencion-al-cliente.component.html
+++ b/src/app/pages/atencion-al-cliente/components/atencion-al-cliente/atencion-al-cliente.component.html
@@ -4,6 +4,9 @@
     <mat-form-field appearance="fill">
       <mat-label>Nombre</mat-label>
       <input matInput formControlName="name" placeholder="Nombre" type="text" />
+      <mat-error *ngIf="formData.get('name')?.hasError('required')">
+        Este campo es obligatorio</mat-error
+      >
     </mat-form-field>
 
     <mat-form-field appearance="fill">
@@ -15,10 +18,16 @@
         placeholder="Email"
         type="email"
       />
+      <mat-error *ngIf="formData.get('email')?.hasError('required')">
+        Este campo es obligatorio</mat-error
+      >
+      <mat-error *ngIf="formData.get('email')?.hasError('email')">
+        Ingrese una dirección de correo electrónico válida</mat-error
+      >
     </mat-form-field>
 
     <mat-form-field appearance="fill">
-      <mat-label>Teléfono</mat-label>
+      <mat-label>Teléfono (opcional)</mat-label>
       <input
         matInput
         formControlName="phone"
@@ -35,6 +44,21 @@
         placeholder="Describir mensaje..."
         type="text"
       ></textarea>
+      <mat-error *ngIf="formData.get('message')?.hasError('required')">
+        Este campo es obligatorio</mat-error
+      >
+
+      <mat-error *ngIf="formData.get('message')?.hasError('minlength')">
+        Ingrese como minimo 20 caracteres</mat-error
+      >
+
+      <mat-error *ngIf="formData.get('message')?.hasError('maxlength')">
+        Ingrese menos de 350 caracteres</mat-error
+      >
+
+      <mat-hint align="end"
+        >{{ formData.get("message")?.value.length }} / 350</mat-hint
+      >
     </mat-form-field>
 
     <mat-form-field appearance="fill">
@@ -75,7 +99,7 @@
         mat-raised-button
         color="warn"
         (click)="resetForm()"
-        type="submit"
+        type="button"
       >
         Resetear Formulario
       </button>
