Products background while loading changed

--- a/src/app/pages/productos/components/productos/productos.component.html
+++ b/src/app/pages/productos/components/productos/productos.component.html
@@ -1,4 +1,7 @@
-<div class="background">
+<div
+  class="background"
+  [ngClass]="loading ? 'backgroundLoading' : 'backgroundLoaded'"
+>
   <main>
     <h2>Productos</h2>
 
