--- a/src/app/pages/productos/components/productos/productos.component.scss
+++ b/src/app/pages/productos/components/productos/productos.component.scss
@@ -1,16 +1,37 @@
-.background {
+.backgroundLoading {
   background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)),
     url(../../../../../assets/img/products.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  height: 76.3%;
+  display: flex;
+  justify-content: center;
+}
+
+.backgroundLoaded {
+  background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)),
+    url(../../../../../assets/img/products.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  justify-content: center;
+}
+
+app-lista-productos {
+  display: flex;
+  justify-content: center;
 }
 
 h2 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
   text-align: left;
   font-size: 28px;
   font-family: "Montserrat", Sans-serif;
   font-weight: 600;
-  padding: 40px 0 25px 400px;
+  padding: 40px 0 25px 0px;
   color: #fff;
 }
