--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -116,6 +116,18 @@
     align-items: center;
     color: #252525;
 
+    mat-icon {
+      background: none;
+      border: none;
+      cursor: pointer;
+      transform: scale(1.2);
+      color: #252525;
+
+      &:active {
+        transform: scale(0.9);
+      }
+    }
+
     .mat-button {
       font-size: 15px;
       font-weight: 400;
