Cart background updated

--- a/src/app/pages/carrito/components/carrito/carrito.component.scss
+++ b/src/app/pages/carrito/components/carrito/carrito.component.scss
@@ -1,8 +1,8 @@
 .background {
-  height: 76.55%;
+  min-height: 76.55%;
 
   background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)),
-    url(../../../../../assets/img/contact.jpg);
+    url(../../../../../assets/img/cart.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
