Products background style updated

--- a/src/app/pages/productos/components/productos/productos.component.html
+++ b/src/app/pages/productos/components/productos/productos.component.html
@@ -1,7 +1,4 @@
-<div
-  class="background"
-  [ngClass]="loading ? 'backgroundLoading' : 'backgroundLoaded'"
->
+<div class="background">
   <main>
     <h2>Productos</h2>
 
