--- a/src/app/pages/productos/components/productos/productos.component.scss
+++ b/src/app/pages/productos/components/productos/productos.component.scss
@@ -1,20 +1,11 @@
-.backgroundLoading {
+.background {
   background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)),
     url(../../../../../assets/img/products.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  height: 76.3%;
+  min-height: 76.3%;
   display: flex;
-  justify-content: center;
-}
-
-.backgroundLoaded {
-  background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)),
-    url(../../../../../assets/img/products.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
   justify-content: center;
 }
 
