--- a/src/app/pages/carrito/components/product/product.component.scss
+++ b/src/app/pages/carrito/components/product/product.component.scss
@@ -1,6 +1,11 @@
 mat-card {
   img {
-    max-height: 100px;
+    height: 150px;
+    width: 150px;
     object-fit: cover;
+  }
+
+  .price {
+    font-weight: 500;
   }
 }
