--- a/src/app/pages/productos/components/producto/producto.component.scss
+++ b/src/app/pages/productos/components/producto/producto.component.scss
@@ -3,11 +3,17 @@ mat-card {
   display: flex;
   align-items: baseline;
   flex-direction: column;
-  height: 400px;
+  height: 500px;
   // margin: 0 28px 0 28px;
 
   h4 {
     height: 100px;
+    text-align: center;
+    margin: auto;
+  }
+
+  .price {
+    font-weight: 500;
     text-align: center;
     margin: auto;
   }
