--- a/src/app/pages/atencion-al-cliente/components/atencion-al-cliente/atencion-al-cliente.component.scss
+++ b/src/app/pages/atencion-al-cliente/components/atencion-al-cliente/atencion-al-cliente.component.scss
@@ -20,6 +20,13 @@
       margin: 0px 0px 4px 0px;
     }
 
+    input:-webkit-autofill {
+      transition: background-color 5000s ease-in-out 0s;
+      -webkit-box-shadow: 0 0 0px 1000px unset;
+      box-shadow: 0 0 0px 1000px unset;
+      -webkit-text-fill-color: #fff;
+    }
+
     h1 {
       padding: 40px 0 0 0;
       display: flex;
