Empty button deleted and products styled

--- a/src/app/pages/productos/components/lista-productos/lista-productos.component.scss
+++ b/src/app/pages/productos/components/lista-productos/lista-productos.component.scss
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   gap: 25px;
-  margin: 0 400px 0 400px;
+  // margin: 0 400px 0 400px;
 
   app-producto {
     flex-basis: 20%;
