--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -19,18 +19,16 @@
   <div class="header__navbar">
     <nav>
       <a mat-button *ngFor="let link of links" routerLink="{{ link.path }}">
-        <mat-icon *ngIf="link.isIcon; else text"> {{ link.desc }}</mat-icon>
+        <mat-icon
+          matBadge="{{ cartLenght }}"
+          matBadgeColor="warn"
+          matBadgeSize="small"
+          *ngIf="link.isIcon; else text"
+        >
+          {{ link.desc }}</mat-icon
+        >
         <ng-template #text>{{ link.desc }}</ng-template>
       </a>
     </nav>
   </div>
-
-  <!-- <button
-    (click)="toggleMenu()"
-    id="menuBtn"
-    class="header__menuBtn"
-    opened="opened"
-  >
-    <mat-icon>menu</mat-icon>
-  </button> -->
 </mat-toolbar>
