--- a/src/app/pages/atencion-al-cliente/components/atencion-al-cliente/atencion-al-cliente.component.html
+++ b/src/app/pages/atencion-al-cliente/components/atencion-al-cliente/atencion-al-cliente.component.html
@@ -57,7 +57,7 @@
       >
 
       <mat-hint align="end"
-        >{{ formData.get("message")?.value.length }} / 350</mat-hint
+        >{{ formData.get("message")?.value?.length }} / 350</mat-hint
       >
     </mat-form-field>
 
