Info bar added to home

--- a/src/app/pages/inicio/components/inicio/inicio.component.html
+++ b/src/app/pages/inicio/components/inicio/inicio.component.html
@@ -86,14 +86,38 @@
     </button>
   </div>
 
-  <div class="card" style="width: 18rem">
-    <img src="..." class="card-img-top" alt="..." />
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">
-        Some quick example text to build on the card title and make up the bulk
-        of the card's content.
-      </p>
+
+
+
+<div class="infobar">
+
+  <div class="info">
+    <mat-icon>local_shipping</mat-icon>
+    <div class="text-column">
+    <h3 class="info-title">ENVÍOS A TODO EL PAÍS</h3>
+    <p class="info-p">Envíos a todo el país</p>
+  </div>
+  </div>
+
+  <div class="info">
+    <mat-icon>attach_money</mat-icon>
+    <div class="text-column">
+    <h3 class="info-title">10% OFF</h3>
+    <p class="info-p">Pago en Efectivo en Showroom</p>
     </div>
   </div>
+
+<div class="info">
+  <mat-icon>payments</mat-icon>
+  <div class="text-column">
+  <h3 class="info-title">TARJETA O EFECTIVO</h3>
+  <p class="info-p">Averigua tu mejor opción</p>
+  </div>
 </div>
+
+</div>
+
+
+</div>
+
+
