--- a/src/app/pages/inicio/components/inicio/inicio.component.scss
+++ b/src/app/pages/inicio/components/inicio/inicio.component.scss
@@ -94,4 +94,51 @@
   .card {
     margin: 40px 175px 25px 175px;
   }
+
+
+
+  .infobar{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    color: #252525;
+    margin: 80px;
+
+    .info {
+      display: flex;
+      flex-direction: row;
+      text-align: left;
+      justify-content: center;
+      align-items: center;
+      padding: 0 70px;
+
+
+      mat-icon{
+        padding: 0 70px 0px 0;
+        font-size: 50px;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        margin: auto;
+        width: 50px;
+        height: 50px;
+      }
+
+      .text-column {
+        display: flex;
+        flex-direction: column;
+
+        .info-title {
+          margin: 0 0 0 0;
+        }
+
+        .info-p{
+          margin: 0 0 0 0;
+        }
+      }
+    }
+  }
 }
+
+
+
