Dividers added and info bar was responsively configured

--- a/src/app/pages/inicio/components/inicio/inicio.component.html
+++ b/src/app/pages/inicio/components/inicio/inicio.component.html
@@ -99,6 +99,8 @@
   </div>
   </div>
 
+  <p class="divider">________</p>
+
   <div class="info">
     <mat-icon>attach_money</mat-icon>
     <div class="text-column">
@@ -106,6 +108,8 @@
     <p class="info-p">Pago en Efectivo en Showroom</p>
     </div>
   </div>
+
+  <p class="divider">________</p>
 
 <div class="info">
   <mat-icon>payments</mat-icon>
