--- a/src/app/pages/inicio/components/inicio/inicio.component.scss
+++ b/src/app/pages/inicio/components/inicio/inicio.component.scss
@@ -97,6 +97,33 @@
 
 
 
+  @media (max-width: 1400px) {
+    .infobar{
+      padding: 0 30px;
+    }
+  }
+
+  @media (max-width: 900px) {
+    .infobar{
+      flex-wrap: wrap;
+      gap: 50px;
+      align-items: center;
+      // justify-content: center;
+      margin: auto;
+      justify-content: center;
+      // padding: 0 60px
+    }
+
+    p.divider {
+      display: none!important;
+    }
+.info {
+  width: 350px;
+}
+
+
+  }
+
   .infobar{
     display: flex;
     flex-direction: row;
@@ -104,13 +131,29 @@
     color: #252525;
     margin: 80px;
 
+    .divider {
+      // position: absolute;
+      // top: 50%;
+      // left: 50%;
+      display: flex;
+     justify-content: center;
+     align-items: center;
+     margin: auto;
+      width: 25px;
+      height: 5px;
+      // height: 20px;
+      font-weight: 500;
+      transform:  translateX(-50%) translateY(-50%) rotate(-90deg);
+    }
+
     .info {
       display: flex;
       flex-direction: row;
       text-align: left;
       justify-content: center;
       align-items: center;
-      padding: 0 70px;
+      padding: 0 60px;
+
 
 
       mat-icon{
@@ -130,6 +173,7 @@
 
         .info-title {
           margin: 0 0 0 0;
+          font-weight: 500;
         }
 
         .info-p{
