Sections photos added to Home page

--- a/src/app/pages/inicio/components/inicio/inicio.component.html
+++ b/src/app/pages/inicio/components/inicio/inicio.component.html
@@ -122,6 +122,33 @@
 </div>
 
 
+
+<div class="photo-sections">
+
+  <div class="photo">
+    <a routerLink="/productos"><h4 class="photo-title">Plantas</h4></a>
+    <a routerLink="/productos"><img class="img" src="../../../../../assets/img/redirect1.jpg" alt=""></a>
+  </div>
+
+<div class="photo">
+  <a routerLink="/productos"><h4 class="photo-title">Decoracion</h4></a>
+  <a routerLink="/productos"><img class="img" src="../../../../../assets/img/redirect2.jpg" alt=""></a>
+</div>
+
+<div class="photo">
+  <a routerLink="/productos"><h4 class="photo-title sale">Sale</h4></a>
+  <a routerLink="/productos"><img class="img" src="../../../../../assets/img/redirect3.jpg" alt=""></a>
+</div>
+
+</div>
+
+
+
+
+
+
+
+
 </div>
 
 
