--- a/src/app/pages/atencion-al-cliente/components/atencion-al-cliente/atencion-al-cliente.component.html
+++ b/src/app/pages/atencion-al-cliente/components/atencion-al-cliente/atencion-al-cliente.component.html
@@ -61,16 +61,16 @@
       >
     </mat-form-field>
 
-    <mat-form-field appearance="fill">
+    <!-- <mat-form-field appearance="fill">
       <mat-label>¿Cómo nos conociste?</mat-label>
       <mat-select formControlName="link">
         <mat-option value="Instagram">Instagram</mat-option>
         <mat-option value="Facebook">Facebook</mat-option>
         <mat-option value="option3">Amigos/Conocidos</mat-option>
       </mat-select>
-    </mat-form-field>
+    </mat-form-field> -->
 
-    <mat-radio-group
+    <!-- <mat-radio-group
       class="form__radio"
       formControlName="genre"
       appearance="fill"
@@ -80,9 +80,9 @@
       <mat-radio-button value="masc">Masculino</mat-radio-button>
       <mat-radio-button value="fem">Femenino</mat-radio-button>
       <mat-radio-button value="otro">Otro</mat-radio-button>
-    </mat-radio-group>
+    </mat-radio-group> -->
 
-    <div class="form__checkbox">
+    <!-- <div class="form__checkbox">
       <label for="newsletter"> <h4>Suscribirse al Newsletter</h4></label>
       <mat-checkbox
         formControlName="newsletter"
@@ -91,18 +91,18 @@
         id="newsletter"
       >
       </mat-checkbox>
-    </div>
+    </div> -->
 
     <div class="form__buttons">
       <button mat-raised-button color="primary" type="submit">Enviar</button>
-      <button
+      <!-- <button
         mat-raised-button
         color="warn"
         (click)="resetForm()"
         type="button"
       >
         Resetear Formulario
-      </button>
+      </button> -->
     </div>
   </form>
 </mat-card>
