--- a/src/app/pages/atencion-al-cliente/components/atencion-al-cliente/atencion-al-cliente.component.scss
+++ b/src/app/pages/atencion-al-cliente/components/atencion-al-cliente/atencion-al-cliente.component.scss
@@ -18,6 +18,7 @@
 
     .space {
       margin: 0px 0px 4px 0px;
+      width: 300px;
     }
 
     input:-webkit-autofill {
@@ -49,7 +50,7 @@
   &__buttons {
     display: flex;
     gap: 15px;
-    justify-content: center;
+    // justify-content: center;
     margin: 0 0 45px 0;
   }
 
@@ -65,6 +66,8 @@
     }
   }
 }
+
+
 
 .redText {
   color: red;
